--- a/backendkled/ledfront/src/index.html
+++ b/backendkled/ledfront/src/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ledfront</title>
+  <meta name="description" content="Valjevo, Dr. Panticeva 25, veliki izbor elektromaterijala, led rasvete, lampi, lustera, reflektora, zidnih svetiljki, kucnih aparata..." />
+  <title>Led Master Valjevo | Led Rasveta | Rasveta | Elektromaterijal </title>
+ 
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/sij.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
